Arreglo bug en los iconos del header en vista mobile (align vertical)

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -63,6 +63,17 @@ body{
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        &__descripcion {
+            text-align: center;
+            border: solid black;
+            border-width: 2px 0;
+            margin-bottom: 50px;
+        
+            background-image: url("../assets/images/backgrounds/seccion__descripcion.jpg");
+            background-size: cover;
+            background-position: center;
+        }
     }
 
     &__boton {      /* Estilo para algunos botones en los main */
